# Tanwa-FLC-Filling-Controll-

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md
ESP-Now-Slave-Ardu/include/: dataStructs.h  flashLogger.h  functions.h  now.h  pinout.h  sdLogger.h
ESP-Now-Slave-Ardu/src/: flashLogger.cpp  functions.cpp  main.cpp  now.cpp  sdLogger.cpp
ESP-Now-Slave-Idf/: CMakeLists.txt  partitions.csv  platformio.ini
ESP-Now-Slave-Idf/include/: cmd.h  dataStructs.h  functions.h  now.h  pinout.h
ESP-Now-Slave-Idf/include/template_lib/: flash.h  flash_nvs.h  flash_task.h  sd_task.h  sdcard.h
ESP-Now-Slave-Idf/src/: cmd.c  functions.c  main.c  now.c
ESP-Now-Slave-Idf/src/template_lib/: flash.c  flash_nvs.c  flash_task.c  sd_task.c  (+1 more)
components/TWOI/: twai_network_example_listen_only_main.c
components/app/: CMakeLists.txt  app_init_task.c  app_init_task.h  can_commands.h  can_task.c  can_task.h  data_handling.c  data_handling.h  measure_task.h  rtos_utilities.c  rtos_utilities.h
components/device_config/: CMakeLists.txt  TANWA_FLC_config.c  TANWA_FLC_config.h  mcu_twai_config.c  mcu_twai_config.h  pinout.h
components/hardware/: CMakeLists.txt  ads1115.c  ads1115.h  max31856.c  max31856.h  pressure_driver.c  pressure_driver.h  tmp1075.c
components/mcu_config/: CMakeLists.txt  mcu_i2c_config.c  mcu_i2c_config.h  mcu_memory_config.c  mcu_memory_config.h  mcu_spi_config.c  mcu_spi_config.h
docs/: ESP-Now-Slave.drawio
hello_world/app/: can_commands.c  can_task.c  init_task.c  init_task.h
hello_world/main/: hello_world_main.c
main/: CMakeLists.txt  main.c
(+21 files in other folders)
